--- a/app/common/directive/d3treeForAngular/css/d3treeForAngular.css
+++ b/app/common/directive/d3treeForAngular/css/d3treeForAngular.css
@@ -15,3 +15,22 @@
 .showTreeTool{
     width: 200px;
 }
+.show-set-rule-add-tool {
+    height: 200px;
+    padding: 10px;border-radius: 10px;
+    overflow: hidden;
+    opacity: 1;
+    z-index:70;
+    width: 200px;
+}
+.hide-set-rule-add-tool {
+    padding: 0 !important;
+    height: 0px;
+    overflow: hidden;
+    opacity: 0;
+}
+.ruleSet-attr-name{
+    margin-right: 8px;
+    font-size: 15px;
+    cursor: pointer;
+}
