--- a/app/css/main.css
+++ b/app/css/main.css
@@ -74,13 +74,82 @@ md-input-container {
 
 md-select {
   margin: 0;
-  border: 1px solid #e1e1e1;
+  border: 1px solid #cccccc;
   border-radius: 4px;
   height: 34px;
   line-height: 29px; }
 
 .md-select-value {
   border-bottom-width: 0; }
+
+md-select.md-default-theme:not([disabled]):focus .md-select-value, md-select:not([disabled]):focus .md-select-value {
+  border-bottom-color: transparent !important;
+  color: inherit; }
+
+md-select-menu.md-default-theme md-content md-option[selected], md-select-menu md-content md-option[selected] {
+  color: #337ab7 !important; }
+
+.tip-show-animate {
+  transition-duration: 0.4s;
+  transition-timing-function: ease-in-out;
+  transition-property: all;
+  background-color: rgba(15, 15, 15, 0.7);
+  height: 100px;
+  z-index: 99; }
+
+.hiddenTreeTool {
+  padding: 0 !important;
+  width: 0;
+  overflow: hidden; }
+
+.showTreeTool {
+  width: 200px; }
+
+.show-set-rule-add-tool {
+  padding: 10px;
+  border-radius: 10px;
+  overflow: hidden;
+  opacity: 1;
+  z-index: 70;
+  width: 200px; }
+
+.hide-set-rule-add-tool {
+  padding: 0 !important;
+  height: 0px;
+  overflow: hidden;
+  opacity: 0; }
+
+.ruleSet-attr-name {
+  margin-right: 8px;
+  font-size: 15px;
+  cursor: pointer; }
+  .ruleSet-attr-name.selected {
+    display: inline-block;
+    height: 36px;
+    line-height: 36px;
+    vertical-align: middle;
+    text-align: center;
+    border-radius: 2px;
+    box-sizing: border-box;
+    outline: none;
+    border: 0;
+    background: #40B98E !important;
+    color: #ffffff !important;
+    padding: 0 12px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+    margin: 0;
+    text-decoration: none; }
+
+.set-rule-add-tool-box {
+  position: absolute;
+  background-color: white;
+  left: 10px;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+  transition-property: all; }
+
+.blue--font {
+  color: #337ab7; }
 
 .new-project-alert-modal-wrapper {
   width: 454px;
@@ -160,7 +229,7 @@ md-select {
       padding: 15px 0; }
       .edit--project--manage--wrapper .base--info--content .edit--project--row--box .attribute--wrapper .attribute--row--box {
         display: block;
-        padding: 5px 0;
+        margin: 5px 0;
         width: 100%;
         height: 34px;
         line-height: 34px; }
@@ -298,6 +367,7 @@ div.ui-grid-cell input.edit-input {
 .ui-grid-row:nth-child(odd) .ui-grid-cell {
   background-color: transparent;
   border-right: none; }
+
 .ui-grid-row:nth-child(even) .ui-grid-cell {
   background-color: transparent;
   border-right: none; }
@@ -565,7 +635,7 @@ path.link {
   .data--base--sidenav--right--box .edit--project--manage--head-box .title {
     color: #797979; }
   .data--base--sidenav--right--box .edit--project--manage--head-box .project--manage--head {
-    color: #2d7d9a;
+    color: #337ab7;
     padding: 0 7px; }
   .data--base--sidenav--right--box .edit--project--manage--head-box .current--column {
     color: #999999;
@@ -942,41 +1012,43 @@ path.link {
       .project--manage--main--content--wrapper .new--project--wrapper .new--project--btn--box .new--project--btn {
         margin: 15px 8px;
         padding: 4px 45px; }
-  .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--title--box {
-    background: #2D7D9A;
-    padding: 11px 14px 6px 14px;
-    color: #ffffff;
-    width: 219px; }
-    .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--title--box .md-headline {
-      font-size: 14px;
-      line-height: 24px; }
-    .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--title--box .md-subhead {
-      font-size: 11px;
-      color: #cccccc !important; }
-  .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--actions--btn--box {
-    background: #E8EDF1;
-    margin: 0;
-    padding: 5px 8px 4px 8px;
-    font-size: 18px; }
-  .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--actions--pull--left {
-    float: left; }
-    .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--actions--pull--left .icon--button {
-      margin: 6px;
-      outline: none; }
-  .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--actions--pull--right {
-    float: right; }
-    .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--actions--pull--right .icon--button {
-      padding: 6px;
-      outline: none; }
-  .project--manage--main--content--wrapper .project--manage--data--list--wrapper .project--manage--list--img--box {
-    height: 121px;
-    width: 100%;
-    background: #ffffff;
-    display: table; }
-    .project--manage--main--content--wrapper .project--manage--data--list--wrapper .project--manage--list--img--box__do--center {
-      display: table-cell;
-      vertical-align: middle;
-      text-align: center; }
+  .project--manage--main--content--wrapper .project--manage--data--list--wrapper {
+    height: 100%; }
+    .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--title--box {
+      background: #2D7D9A;
+      padding: 11px 14px 6px 14px;
+      color: #ffffff;
+      width: 219px; }
+      .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--title--box .md-headline {
+        font-size: 14px;
+        line-height: 24px; }
+      .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--title--box .md-subhead {
+        font-size: 11px;
+        color: #cccccc !important; }
+    .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--actions--btn--box {
+      background: #E8EDF1;
+      margin: 0;
+      padding: 5px 8px 4px 8px;
+      font-size: 18px; }
+    .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--actions--pull--left {
+      float: left; }
+      .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--actions--pull--left .icon--button {
+        margin: 6px;
+        outline: none; }
+    .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--actions--pull--right {
+      float: right; }
+      .project--manage--main--content--wrapper .project--manage--data--list--wrapper .card--actions--pull--right .icon--button {
+        padding: 6px;
+        outline: none; }
+    .project--manage--main--content--wrapper .project--manage--data--list--wrapper .project--manage--list--img--box {
+      height: 121px;
+      width: 100%;
+      background: #ffffff;
+      display: table; }
+      .project--manage--main--content--wrapper .project--manage--data--list--wrapper .project--manage--list--img--box__do--center {
+        display: table-cell;
+        vertical-align: middle;
+        text-align: center; }
 
 .new--project--manage--modal {
   width: 715px; }
@@ -1040,4 +1112,18 @@ path.link {
     .data--module--new--prompt--wrap .new--prompt__btn--box button {
       padding: 4px 40px; }
 
-/*# sourceMappingURL=main.css.map */
+.rule--set--re--rules--wrap {
+  display: inline-block;
+  vertical-align: middle; }
+  .rule--set--re--rules--wrap .rule--Property--box {
+    display: inline-block;
+    position: relative; }
+    .rule--set--re--rules--wrap .rule--Property--box .delete--btn {
+      min-width: inherit; }
+
+.rule--set--add--rule--wrap {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative; }
+
+/*# sourceMappingURL=../../maps/css/main.css.map */
