--- a/app/css/main/_select.scss
+++ b/app/css/main/_select.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 md-select{
   margin: 0;
-  border: 1px solid #e1e1e1;
+  border: 1px solid #cccccc;
   border-radius: 4px;
   height: 34px;
   line-height: 29px;
@@ -9,3 +9,12 @@ md-select{
 .md-select-value{
   border-bottom-width: 0;
 }
+md-select.md-default-theme:not([disabled]):focus .md-select-value, md-select:not([disabled]):focus .md-select-value {
+  border-bottom-color: transparent !important;
+  color: inherit;
+}
+md-select-menu.md-default-theme md-content md-option[selected], md-select-menu md-content md-option[selected] {
+  color: #337ab7 !important;
+}
+
+
