--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -16,5 +16,7 @@
 @import "../modules/login/css/login";
 @import "../modules/main/css/infoArchives";
 @import "../modules/projectManage/css/projectManage";
+@import "../modules/batch/css/batch";
+@import "../modules/serviceWatch/css/serviceWatch";
 
 
