--- a/app/css/main/_body.scss
+++ b/app/css/main/_body.scss
@@ -8,3 +8,9 @@ body {
 * {
   outline:none;
 }
+.ver-align-top{
+  vertical-align: top !important;
+}
+.position--relative{
+  position: relative;
+}
