--- a/app/css/main/_buttons.scss
+++ b/app/css/main/_buttons.scss
@@ -1,4 +1,8 @@
 @charset "utf-8";
+.button-disabled{
+  cursor: not-allowed;
+  color: gray;
+}
 .green--btn{
   display: inline-block;
   position: relative;
