--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,7 @@
+.button-disabled {
+  cursor: not-allowed;
+  color: gray; }
+
 .green--btn {
   display: inline-block;
   position: relative;
@@ -76,6 +80,12 @@ body {
 * {
   outline: none; }
 
+.ver-align-top {
+  vertical-align: top !important; }
+
+.position--relative {
+  position: relative; }
+
 .input--basic--style {
   height: 34px;
   padding: 6px 12px;
@@ -110,7 +120,7 @@ md-select {
 .md-select-value {
   border-bottom-width: 0;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  padding: 2px;
+  padding: 2px 2px 2px 6px;
   color: #555555;
   min-width: inherit; }
 
@@ -487,19 +497,19 @@ div.ui-grid-cell input.edit-input {
 .node rect {
   cursor: pointer;
   stroke: #8bd7c8;
-  stroke-width: 2px;
+  stroke-width: 0px;
   fill: #1ab394; }
 
 .node rect.block {
   cursor: pointer;
   stroke: #8cc0e1;
-  stroke-width: 1.5px;
+  stroke-width: 0px;
   fill: #1c84c6; }
 
 .node rect.node {
   cursor: pointer;
   stroke: #fad4aa;
-  stroke-width: 1.5px;
+  stroke-width: 0px;
   fill: #f8ac59; }
 
 .nodeTool {
@@ -547,6 +557,11 @@ path.link {
 .icon-size {
   font-size: 15px !important;
   cursor: pointer; }
+
+.new-rect {
+  stroke-width: 5px !important;
+  stroke: #ffffff !important;
+  fill: #1c84c6 !important; }
 
 .hsFormMessage-container {
   position: absolute; }
@@ -612,9 +627,9 @@ path.link {
   float: left;
   width: calc(100% - 237px);
   height: 100%;
-  padding: 0 20px; }
+  padding: 0 15px; }
   .data--base--sidenav--right--box .data--filtering--wrapper {
-    margin: 20px 0; }
+    margin: 15px 0; }
     .data--base--sidenav--right--box .data--filtering--wrapper .data--filtering--head {
       font-size: 16px;
       margin-bottom: 10px; }
@@ -623,41 +638,46 @@ path.link {
         margin-right: 5px; }
     .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box {
       background: #f5f5f5;
-      border-radius: 5px;
-      padding: 10px 15px 10px 15px; }
+      padding: 10px 0 10px 15px;
+      border: 1px solid #dbe1e4; }
       .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box {
         display: inline-block;
-        width: 12%;
         min-width: 130px;
-        margin-right: 1%;
-        vertical-align: top; }
+        margin-right: 5px;
+        vertical-align: middle; }
         .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box.time--frame {
           float: right;
-          width: 33%;
-          min-width: 288px;
+          width: 340px;
           margin-right: 0; }
           .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box.time--frame .attribute--value {
             display: inline-block;
-            width: 46%; }
+            width: 130px; }
           .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box.time--frame .time--frame__sign {
-            position: relative;
-            bottom: 13px;
-            padding: 0 1%; }
+            padding: 0 3px; }
         .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box .attribute--title {
-          display: block;
-          padding-bottom: 6px; }
-        .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box .attribute--value .ui-select-multiple.ui-select-bootstrap .ui-select-match-item {
-          background: #91a8c0;
-          color: #ffffff;
-          margin: 2px 3px 3px 0; }
-        .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box .attribute--value .ui-select-multiple.ui-select-bootstrap .ui-select-match .close {
-          font-size: 21px;
-          color: #ffffff;
-          opacity: 1;
-          outline: none; }
-        .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box .attribute--value .ui-select-multiple.ui-select-bootstrap {
-          height: auto;
-          min-height: 34px; }
+          display: inline-block;
+          vertical-align: middle;
+          margin-right: 5px; }
+        .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box .attribute--value {
+          display: inline-block;
+          vertical-align: middle; }
+          .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box .attribute--value md-select {
+            width: 70px;
+            background: #ffffff; }
+          .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box .attribute--value .ui-select-container {
+            width: 100px; }
+          .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box .attribute--value .ui-select-multiple.ui-select-bootstrap .ui-select-match-item {
+            background: #91a8c0;
+            color: #ffffff;
+            margin: 2px 3px 3px 0; }
+          .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box .attribute--value .ui-select-multiple.ui-select-bootstrap .ui-select-match .close {
+            font-size: 21px;
+            color: #ffffff;
+            opacity: 1;
+            outline: none; }
+          .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box .attribute--value .ui-select-multiple.ui-select-bootstrap {
+            height: auto;
+            min-height: 34px; }
       .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .search--location--box {
         height: 48px;
         line-height: 48px;
@@ -729,15 +749,16 @@ path.link {
   .data--base--wrapper .header {
     min-height: 0; }
   .data--base--wrapper .data--base--column--wrapper {
-    height: calc(100% - 115px);
-    position: absolute;
-    top: 115px;
-    bottom: 0; }
+    height: calc(100% - 66px); }
+    .data--base--wrapper .data--base--column--wrapper.project--edit {
+      position: absolute;
+      top: 115px;
+      bottom: 0;
+      height: auto; }
     .data--base--wrapper .data--base--column--wrapper ul, .data--base--wrapper .data--base--column--wrapper li {
       padding: 0;
       margin: 0; }
     .data--base--wrapper .data--base--column--wrapper .data--base--column--box {
-      position: absolute;
       background: #f7f7f7;
       height: 100%;
       /*border-left: 1px solid #E5E5E5;*/
@@ -779,6 +800,25 @@ path.link {
           padding-left: 23px; }
     .data--base--wrapper .data--base--column--wrapper .flex {
       padding: 8px 0; }
+
+.data--base--view--type--filter {
+  position: absolute;
+  top: 40px;
+  right: 25px; }
+  .data--base--view--type--filter_title {
+    display: inline-block;
+    vertical-align: middle; }
+  .data--base--view--type--filter .radio--box {
+    display: inline-block;
+    vertical-align: middle; }
+    .data--base--view--type--filter .radio--box md-radio-button {
+      display: inline-block;
+      vertical-align: middle;
+      margin: 0; }
+    .data--base--view--type--filter .radio--box .md-radio-button.md-default-theme.md-checked .md-off, .data--base--view--type--filter .radio--box md-radio-button.md-checked .md-off {
+      border-color: #199ed8; }
+    .data--base--view--type--filter .radio--box .md-radio-button.md-default-theme.md-checked .md-on, .data--base--view--type--filter .radio--box md-radio-button.md-checked .md-on {
+      background: #199ed8; }
 
 .hs-user-login {
   width: 100%;
@@ -1199,7 +1239,8 @@ path.link {
     .data--module--new--prompt--wrap .new--prompt__btn--box .title--content {
       padding: 15px 0; }
     .data--module--new--prompt--wrap .new--prompt__btn--box button {
-      padding: 4px 40px; }
+      padding: 4px 40px;
+      font-size: 13px; }
 
 .rule--set--re--rules--wrap {
   display: inline-block;
@@ -1286,5 +1327,104 @@ path.link {
   width: 460px; }
   .project-manage-delete-alert-modal-wrapper .project-manage-delete-alert-modal-footer {
     padding: 20px; }
+
+.right--sidebar--info--wrap {
+  width: 400px;
+  background: #EDEDED; }
+  .right--sidebar--info--wrap .right--sidebar--info--head {
+    background: #000000; }
+    .right--sidebar--info--wrap .right--sidebar--info--head .md-toolbar-tools {
+      display: block;
+      padding: 10px 16px; }
+    .right--sidebar--info--wrap .right--sidebar--info--head .head {
+      display: block;
+      font-size: 14px; }
+    .right--sidebar--info--wrap .right--sidebar--info--head .title {
+      display: block;
+      font-size: 16px; }
+    .right--sidebar--info--wrap .right--sidebar--info--head .close {
+      color: #ffffff;
+      opacity: 1;
+      position: absolute;
+      right: 10px;
+      top: 12px; }
+
+.right--sidebar--info--content {
+  background: inherit; }
+  .right--sidebar--info--content md-content {
+    background: inherit; }
+  .right--sidebar--info--content .attr--type--box {
+    margin: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #cccccc; }
+    .right--sidebar--info--content .attr--type--box:last-child {
+      border-bottom: none; }
+    .right--sidebar--info--content .attr--type--box .single--attr--row {
+      padding: 5px 0; }
+      .right--sidebar--info--content .attr--type--box .single--attr--row .title {
+        display: inline-block;
+        vertical-align: middle;
+        width: 115px;
+        text-align: left;
+        color: #797979;
+        padding-right: 5px;
+        font-weight: normal;
+        margin: 0; }
+      .right--sidebar--info--content .attr--type--box .single--attr--row .value {
+        display: inline-block;
+        vertical-align: middle;
+        max-width: 255px;
+        min-width: 55px; }
+        .right--sidebar--info--content .attr--type--box .single--attr--row .value .progress-striped {
+          margin-bottom: 10px; }
+      .right--sidebar--info--content .attr--type--box .single--attr--row .sidebar--progress--time {
+        font-size: 12px;
+        color: #797979; }
+      .right--sidebar--info--content .attr--type--box .single--attr--row .data-volume-info-prompt {
+        font-size: 12px;
+        color: #797979; }
+        .right--sidebar--info--content .attr--type--box .single--attr--row .data-volume-info-prompt .fa {
+          color: #ff9900;
+          font-size: 15px;
+          margin-right: 5px; }
+
+.batch--grid--wrap {
+  position: absolute;
+  top: 85px;
+  left: 15px;
+  right: 15px;
+  bottom: 0;
+  border: 1px solid #dbe1e4; }
+  .batch--grid--wrap .operation--box {
+    background: #f5f5f5;
+    padding: 15px; }
+  .batch--grid--wrap .ui-grid-header-cell-primary-focus {
+    background: #3a87ad;
+    color: #ffffff;
+    font-weight: normal; }
+  .batch--grid--wrap .ui-grid-header-cell .sortable {
+    border: none; }
+
+.service--watch--wrap {
+  width: 100%;
+  height: 100%;
+  background: #ffffff; }
+  .service--watch--wrap .service--watch--prompt--wrap {
+    height: 95px;
+    padding: 25px 20px;
+    background: #f2f2f2;
+    margin-bottom: 15px; }
+    .service--watch--wrap .service--watch--prompt--wrap .title {
+      font-size: 16px;
+      color: #8b8b8b;
+      margin-bottom: 8px; }
+  .service--watch--wrap .service--watch--grid {
+    position: absolute;
+    top: 120px;
+    left: 0;
+    right: 0;
+    bottom: 35px; }
+    .service--watch--wrap .service--watch--grid .ui--grid {
+      height: 100%; }
 
 /*# sourceMappingURL=main.css.map */
