--- a/app/css/main/_select.scss
+++ b/app/css/main/_select.scss
@@ -9,7 +9,7 @@ md-select{
 .md-select-value{
   border-bottom-width: 0;
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-  padding: 2px;
+  padding: 2px 2px 2px 6px;
   color: #555555;
   min-width: inherit;
 }
