--- a/app/modules/batch/template/ui-grid-template/grid-dataError-status.html
+++ b/app/modules/batch/template/ui-grid-template/grid-dataError-status.html
@@ -1,8 +1,12 @@
 <div  class="hs-ui-grid-cell-contents hs-ui-grid-cell add-background-colors clearfix" >
-    <div >
-        <span  style="color:green;font-size:18px" ng-if="row.entity.status == true">正常</span>
-        <span  style="color:red;font-size:18px" ng-if="row.entity.status == false">异常</span>
+    <div class="" >
+        <span  style="color:green;font-size:18px" ng-if="row.entity.batchStatus == 0" class="fa fa-check-circle-o"></span>
+        <span  style="color:#FF9900;font-size:18px" ng-if="row.entity.batchStatus == 1" class="fa fa-exclamation-triangle"></span>
+        <span  style="color:#FF9900;font-size:18px" ng-if="row.entity.batchStatus == 2" class="fa fa-exclamation-triangle"></span>
+        <span  style="color:#FF9900;font-size:18px" ng-if="row.entity.batchStatus == 3" class="fa fa-exclamation-triangle"></span>
+        <span  style="color:#FF9900;font-size:18px" ng-if="row.entity.batchStatus == 4" class="fa fa-exclamation-triangle"></span>
+        <span  style="color:#FF9900;font-size:18px" ng-if="row.entity.batchStatus == 5" class="fa fa-exclamation-triangle"></span>
+        <span  style="color:#FF9900;font-size:18px" ng-if="row.entity.batchStatus == 6" class="fa fa-exclamation-triangle"></span>
     </div>
-
 
 </div>
