--- a/app/modules/dataBase/css/_dataBase.scss
+++ b/app/modules/dataBase/css/_dataBase.scss
@@ -20,9 +20,9 @@
   float: left;
   width: calc(100% - 237px);
   height: 100%;
-  padding: 0 20px;
+  padding: 0 15px;
   .data--filtering--wrapper{
-    margin: 20px 0;
+    margin: 15px 0;
     .data--filtering--head{
       font-size: 16px;
       margin-bottom: 10px;
@@ -33,36 +33,50 @@
     }
     .filter--properties--box{
       background: #f5f5f5;
-      border-radius: 5px;
-      padding: 10px 15px 10px 15px;
+      //border-radius: 5px;
+      padding: 10px 0 10px 15px;
+      border: 1px solid #dbe1e4;
       .single--attribute--box{
         display: inline-block;
-        width: 12%;
+        //width: 12%;
         min-width: 130px;
-        margin-right: 1%;
-        vertical-align: top;
+        margin-right: 5px;
+        vertical-align: middle;
+        //min-height: 34px;
         &.time--frame{
           float: right;
-          width: 33%;
-          min-width: 288px;
+          width: 340px;
+          //min-width: 288px;
           margin-right: 0;
           .attribute--value{
             display: inline-block;
-            width: 46%;
+            //width: 46%;
+            width: 130px;
           }
           .select--time{
           }
           .time--frame__sign{
-            position: relative;
-            bottom: 13px;
-            padding: 0 1%;
+            //position: relative;
+            //bottom: 13px;
+            padding: 0 3px;
           }
         }
         .attribute--title{
-          display: block;
-          padding-bottom: 6px
+          display: inline-block;
+          vertical-align: middle;
+          margin-right: 5px;
+          //padding-bottom: 6px
         }
         .attribute--value{
+          display: inline-block;
+          vertical-align: middle;
+          md-select{
+            width: 70px;
+            background: #ffffff;
+          }
+          .ui-select-container {
+            width: 100px;
+          }
           //  select within delete operation
           .ui-select-multiple.ui-select-bootstrap .ui-select-match-item{
             background: #91a8c0;
@@ -188,16 +202,19 @@
     //height: 100%;
     //overflow: hidden;
     //width: 235px;
-    height: calc(100% - 115px);
-    position: absolute;
-    top: 115px;
-    bottom: 0;
+    height: calc(100% - 66px);
+    &.project--edit{
+      position: absolute;
+      top: 115px;
+      bottom: 0;
+      height: auto;
+    }
     ul,li{
       padding: 0;
       margin: 0;
     }
     .data--base--column--box{
-      position: absolute;
+      //position: absolute;
       background: #f7f7f7;
       height: 100%;
       /*border-left: 1px solid #E5E5E5;*/
@@ -264,4 +281,28 @@
   //  right: 0px;
   //  bottom: 20px;
   //}
+}
+.data--base--view--type--filter{
+  position: absolute;
+  top: 40px;
+  right: 25px;
+  &_title{
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .radio--box{
+    display: inline-block;
+    vertical-align: middle;
+    md-radio-button{
+      display: inline-block;
+      vertical-align: middle;
+      margin: 0;
+    }
+    .md-radio-button.md-default-theme.md-checked .md-off, md-radio-button.md-checked .md-off {
+      border-color: #199ed8;
+    }
+    .md-radio-button.md-default-theme.md-checked .md-on, md-radio-button.md-checked .md-on {
+      background: #199ed8;
+    }
+  }
 }
