--- a/app/modules/dataBase/template/mdDialog/previewDoc.html
+++ b/app/modules/dataBase/template/mdDialog/previewDoc.html
@@ -4,8 +4,8 @@
         <div class="md-toolbar-tools">
             <h2>杭州市发改委 > 企业项目投资核准</h2>
             <span flex></span>
-            <button class="close" ng-click="vm.cancel()">
-                <span class="glyphicon glyphicon-remove"></span>
+            <button type="button" class="close" ng-click="vm.cancel()" aria-label="Close">
+                <span aria-hidden="true">×</span>
             </button>
         </div>
     </md-toolbar>
