--- a/app/modules/login/css/_login.scss
+++ b/app/modules/login/css/_login.scss
@@ -152,6 +152,9 @@
     text-align: center;
     color: #ffffff;
     margin-top: 90px;
+    &__logo{
+      width: 200px;
+    }
   }
   .input-content-wrapper{
     width: 420px;
