--- a/app/modules/serviceWatch/template/ui-grid-template/grid-service-operation.html
+++ b/app/modules/serviceWatch/template/ui-grid-template/grid-service-operation.html
@@ -18,6 +18,6 @@
 
     </div>
     <div ng-if="row.entity.isChanging">
-        正在处理...
+        <md-progress-circular  class="md-hue-2" md-diameter="20px"></md-progress-circular>
     </div>
 </div>
