--- a/app/css/main/_buttons.scss
+++ b/app/css/main/_buttons.scss
@@ -72,6 +72,32 @@
     background: #999999 !important;
   }
 }
+.blue--btn{
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  min-height: 36px;
+  min-width: 88px;
+  line-height: 36px;
+  vertical-align: middle;
+  align-items: center;
+  text-align: center;
+  border-radius: 2px;
+  box-sizing: border-box;
+  outline: none;
+  border: 0;
+  background: #3A87AD !important;
+  color: #ffffff !important;
+  padding: 0 12px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+  margin: 0 8px;
+  &:hover{
+    background: #3d95bc !important;
+  }
+}
+
+
+
 .md-button{
   font-size: inherit;
 }
