--- a/app/modules/batch/template/sideBar/sideBar.html
+++ b/app/modules/batch/template/sideBar/sideBar.html
@@ -1,10 +1,11 @@
 <md-toolbar class="md-theme-indigo right--sidebar--info--head">
     <div class="md-toolbar-tools">
-        <div class="head">详细信息</div>
-        <div class="title">{{vm.entity.id}}</div>
-        <button class="close" ng-click="vm.closeSideBar()">
-            <span class="glyphicon glyphicon-remove"></span>
+        <button type="button" class="close" ng-click="vm.closeSideBar()" aria-label="Close">
+            <span aria-hidden="true">×</span>
         </button>
+        <div class="head">详细信息</div>
+        <div class="title">{{vm.batchInfo.id}}</div>
+
     </div>
 </md-toolbar>
 
@@ -16,36 +17,41 @@
                     <!--<span>基本信息</span>-->
                     <div class="single--attr--row">
                         <label class="title">批次号</label>
-                        <span class="value">{{vm.entity.batchCode}}</span>
+                        <span class="value">{{vm.batchInfo.batchCode}}</span>
                     </div>
                     <div class="single--attr--row">
                         <label class="title">业务系统ID</label>
-                        <span class="value">{{vm.entity.id}}</span>
+                        <span class="value">{{vm.projectInfo.businessCode}}</span>
                     </div>
                     <div class="single--attr--row">
                         <label class="title">业务系统名称</label>
-                        <span class="value">{{vm.entity.YWUnit}}</span>
+                        <span class="value">{{vm.projectInfo.systemName}}</span>
                     </div>
                     <div class="single--attr--row">
                         <label class="title">状态</label>
-                        <span class="value">{{vm.entity.batchStatus}}</span>
+                        <span class="value" ng-if="vm.batchInfo.batchStatus==0">AIU封装中</span>
+                        <span class="value" ng-if="vm.batchInfo.batchStatus==1">AIU封装完成</span>
+                        <span class="value" ng-if="vm.batchInfo.batchStatus==2">SIP封装中</span>
+                        <span class="value" ng-if="vm.batchInfo.batchStatus==3">SIP封装完成</span>
+                        <span class="value" ng-if="vm.batchInfo.batchStatus==4">AIP封装中</span>
+                        <span class="value" ng-if="vm.batchInfo.batchStatus==5">AIP封装完成</span>
+                        <span class="value" ng-if="vm.batchInfo.batchStatus==6">异常</span>
                     </div>
                 </div>
                 <div class="attr--type--box">
                     <!--<span>阶段状态</span>-->
                     <div class="single--attr--row">
-                        <label class="title ver-align-top">AIU -> SIP</label>
-                        <div class="value ver-align-top">
-                            <uib-progressbar class="progress-striped active" type="warning" value="vm.rate.AIUSIP">{{vm.rate.AIUSIP}}%</uib-progressbar>
-                            <div class="sidebar--progress--time">2016/01/23 13:19:39 - 2016/01/23 13:19:45</div>
+                        <label class="title ver-align-top">AIU <span class="fa fa-long-arrow-right"></span> SIP</label><div class="value ver-align-top">
+                            <uib-progressbar  class="progress-striped active" type="warning" value="vm.batchInfo.AIU2SIP"></uib-progressbar>{{vm.batchInfo.AIU2SIP}}%
+                            <div class="sidebar--progress--time">{{vm.batchInfo.packageAiuStartDate | date:'yyyy/MM/dd&nbsp;HH:mm:ss'}}&nbsp;-&nbsp;{{vm.batchInfo.packageAiuEndDate | date:'yyyy/MM/dd&nbsp;HH:mm:ss'}}</div>
                         </div>
 
                     </div>
                     <div class="single--attr--row">
-                        <label class="title ver-align-top">SIP -> AIP</label>
-                        <div class="value ver-align-top">
-                            <uib-progressbar class="progress-striped active"  type="warning" value="vm.rate.SIPAIP">{{vm.rate.SIPAIP}}%</uib-progressbar>
-                            <div class="sidebar--progress--time">2016/01/23 13:19:39 - 2016/01/23 13:19:45</div>
+                        <label class="title ver-align-top">SIP <span class="fa fa-long-arrow-right"></span> AIP</label><div class="value ver-align-top">
+                            <uib-progressbar ng-show="vm.batchInfo.batchStatus>=2" class="progress-striped active"  type="warning" value="vm.batchInfo.SIP2AIP"></uib-progressbar><span ng-if="vm.batchInfo.batchStatus>=2">{{vm.batchInfo.SIP2AIP}}%</span>
+                            <span ng-if="vm.batchInfo.batchStatus<2">未开始</span>
+                            <div class="sidebar--progress--time">{{vm.batchInfo.packageSipStartDate | date:'yyyy/MM/dd&nbsp;HH:mm:ss'}}&nbsp;-&nbsp;{{vm.batchInfo.packageSipEndDate | date:'yyyy/MM/dd&nbsp;HH:mm:ss'}}</div>
                         </div>
                     </div>
                 </div>
@@ -53,19 +59,19 @@
                     <!--<span>数据量信息</span>-->
                     <div class="single--attr--row">
                         <span class="title">摄入AIU数量</span>
-                        <span class="value">{{vm.entity.aiuCount}}</span>
+                        <span class="value">{{vm.batchInfo.aiuCount}}</span>
                         <span class="title">出错数量</span>
                         <span class="value">0</span>
                     </div>
                     <div class="single--attr--row">
                         <span class="title">AIU转换为SIP数量</span>
-                        <span class="value">{{vm.entity.aiu2sipSuccessCount}}</span>
+                        <span class="value">{{vm.batchInfo.aiu2sipSuccessCount}}</span>
                         <span class="title">出错数量</span>
-                        <span class="value">{{vm.entity.aiu2sipFailCount}}</span>
+                        <span class="value">{{vm.batchInfo.aiu2sipFailCount}}</span>
                     </div>
                     <div class="single--attr--row">
                         <span class="title">SIP转换为AIP数量</span>
-                        <span class="value">{{vm.entity.aipCount}}</span>
+                        <span class="value">{{vm.batchInfo.aipCount}}</span>
                         <span class="title">出错数量</span>
                         <span class="value">0</span>
                     </div>
@@ -81,52 +87,58 @@
                     </div>
 
                 </div>
-                <div class="attr--type--box">
-                    <!--<span>异常处理</span>-->
+                <div class="attr--type--box" ng-show="vm.errorInfo">
                     <div class="single--attr--row">
                         <span class="title">异常数据包类型</span>
-                        <span class="value">AIU</span>
+                        <span class="value" ng-if="vm.errorInfo.packageType == 0">AIU</span>
+                        <span class="value" ng-if="vm.errorInfo.packageType == 1">SIP</span>
                     </div>
                     <div class="single--attr--row">
                         <span class="title">异常数据包数量</span>
-                        <span class="value">5</span>
-                        <a ng-click="vm.checkErrorList()">点击查看</a>
+                        <span class="value">{{vm.errorInfo.packageCount}}</span>
+                        <a ng-if="vm.errorInfo.id" ng-click="vm.checkErrorList(vm.errorInfo.id)">点击查看</a>
                     </div>
                     <div class="single--attr--row">
                         <span class="title">异常处理</span>
-                        <span class="value">待处理</span>
+                        <span class="value" ng-if="vm.errorInfo.handleBehavior == 0" >待处理</span>
+                        <span class="value" ng-if="vm.errorInfo.handleBehavior == 1" >已转换</span>
+                        <span class="value" ng-if="vm.errorInfo.handleBehavior == 2" >已删除</span>
                     </div>
                 </div>
             </md-content>
         </md-tab>
-        <md-tab label="异常处理记录">
+        <md-tab label="异常处理记录" ng-if="vm.errorInfo">
             <md-content class="">
                 <div class="attr--type--box">
                     <div class="single--attr--row">
                         <label class="title">异常数据包类型</label>
-                        <span class="value">AIU</span>
+                        <span class="value" ng-if="vm.errorInfo.packageType == 0">AIU</span>
+                        <span class="value" ng-if="vm.errorInfo.packageType == 1">SIP</span>
                     </div>
                     <div class="single--attr--row">
                         <label class="title">异常数据包数量</label>
-                        <span class="value">5</span>
+                        <span class="value">{{vm.errorInfo.packageCount}}</span>
                     </div>
                     <div class="single--attr--row">
                         <label class="title">处理时间</label>
-                        <span class="value">2017.03.31 18:09:34</span>
+                        <span class="value">{{vm.errorInfo.operateDate | date:'yyyy年MM月dd日'}}</span>
                     </div>
                     <div class="single--attr--row">
                         <label class="title">处理动作</label>
                         <span class="value">强制转换</span>
-                        <a ng-click="vm.checkErrorList()">查看数据</a>
+                        <!--<span class="value" ng-if="vm.errorInfo.handleBehavior == 0" >待处理</span>-->
+                        <!--<span class="value" ng-if="vm.errorInfo.handleBehavior == 1" >已转换</span>-->
+                        <!--<span class="value" ng-if="vm.errorInfo.handleBehavior == 2" >已删除</span>-->
+                        <a ng-if="vm.errorInfo.id" ng-click="vm.checkErrorList(vm.errorInfo.id)">查看数据</a>
                     </div>
                     <div class="single--attr--row">
                         <label class="title">处理人</label>
-                        <span class="value">admin</span>
+                        <span class="value">{{vm.errorInfo.operator}}</span>
                     </div>
                     <div class="single--attr--row">
                         <label class="title">处理结果</label>
-                        <span>成功 5</span>
-                        <span>失败 0</span>
+                        <span>成功 {{vm.errorInfo.successCount}}</span>
+                        <span>失败 {{vm.errorInfo.failCount}}</span>
                     </div>
                 </div>
             </md-content>
