--- a/app/modules/batch/template/ui-grid-template/grid-dataError-startDate.html
+++ b/app/modules/batch/template/ui-grid-template/grid-dataError-startDate.html
@@ -1,4 +1,4 @@
 <div  class="hs-ui-grid-cell-contents hs-ui-grid-cell add-background-colors clearfix" >
-    <span >{{row.entity.startDate | date:'yyyy年MM月dd日 HH:mm:ss'}}  </span>
+    <span >{{row.entity.packageAiuStartDate | date:'yyyy年MM月dd日 HH:mm:ss'}}  </span>
 
 </div>
