--- a/app/modules/main/css/_infoArchives.scss
+++ b/app/modules/main/css/_infoArchives.scss
@@ -2,7 +2,9 @@
 
 .info--archive--main--content--wrapper{
   max-width: 1920px;
-  min-width: 1200px;
+  min-width: 1300px;
+  //min-width: 1200px;
+  overflow: hidden;
   width: auto;
   margin: 0 auto;
   height: 100%;
@@ -27,6 +29,9 @@
         line-height: 57px;
         text-align: center;
         font-size: 18px;
+      }
+      &_logo{
+        width: 143px;
       }
     }
     .info--archive--sidebar--content{
@@ -98,6 +103,7 @@
       max-width: 1742px;
       width: auto;
       background: #eaeae2;
+      border-bottom: 2px solid #e4e4e4;
       .admin--info{
         float: right;
         height: 57px;
@@ -123,14 +129,15 @@
       z-index: 10;
       width: 100%;
       height: calc(100% - 57px);
-      border-top: 1px solid #dfe0e1;
+      //border-top: 1px solid #dfe0e1;
       //border-left: 1px solid #d7d7d7;
-      border-right: 1px solid #f2f2f2;
+      //border-right: 1px solid #f2f2f2;
       //clear: both;
       .data--base--sidenav{
         float: left;
         height: 100%;
         border-top: 1px solid #d7d7d7;
+        margin-top: -1px;
         .select--data--source--box{
           font-size: 16px;
           padding: 22px 0 20px 25px;
