--- a/app/modules/projectManage/css/_projectManage.scss
+++ b/app/modules/projectManage/css/_projectManage.scss
@@ -10,6 +10,15 @@
     .new--project--btn--box{
       height: 79px;
       padding-bottom: 8px;
+      padding-left: 24px;
+      .title{
+        color: #797979;
+        margin-bottom: 5px;
+      }
+      .prompt-content{
+        color: #797979;
+        font-size: 13px;
+      }
       .new--project--btn{
         margin: 15px 8px;
         padding: 4px 45px;
@@ -28,11 +37,11 @@
     .project--data--list--card.ng-leave {opacity: 1;}
     .project--data--list--card.ng-leave.ng-leave-active { opacity: 0; transform: translateY(30px);}
     .card--title--box{
-      background: #2D7D9A;
+      background: #4F93C5;
       padding:11px 14px 6px 14px;
       color: #ffffff;
       //width: 184px;
-      width: 219px;
+      width: 218px;
       .md-headline{
         font-size: 14px;
         line-height: 24px;
@@ -73,6 +82,34 @@
         text-align: center;
       }
     }
+  }
+}
+
+//projectManage
+.archive--policy--prompt--wrap{
+  display: inline-block;
+  vertical-align: middle;
+  width: 264px;
+  height: 100%;
+  min-height: 178px;
+  color: #337ab7;
+  background: #ECF6FB;
+  padding: 30px 20px;
+  margin-left: 10px;
+  position: absolute;
+  top: 0;
+  right: 8px;
+  bottom: 0;
+  .head{
+    font-size: 16px;
+    margin-bottom: 10px;
+    img{
+      margin: 0 10px;
+    }
+  }
+  .prompt{
+    padding: 10px 0;
+
   }
 }
 
@@ -217,6 +254,9 @@
 //editCustomData
 .edit--custom--data--modal--wrapper{
   width: 640px;
+  &.lg-modal{
+    width: 800px;
+  }
   .modal--head--title{
     padding: 0 10px;
   }
@@ -233,6 +273,7 @@
         padding-bottom: 10px;
       }
       &__table{
+        color:  #999999;
         td{
           vertical-align: middle;
         }
@@ -260,6 +301,10 @@
         .delete--attribute--btn{
           background: #e1654f;
         }
+        &>tbody>tr>td, &>tbody>tr>th{
+          border: none;
+          padding: 4px 4px 0 4px;
+        }
       }
     }
     .edit--custom--data--modal__input--box{
@@ -284,13 +329,204 @@
   }
 }
 
-.table>tbody>tr>td, .table>tbody>tr>th{
-  border: none;
-}
+
 
 .project-manage-delete-alert-modal-wrapper{
   width: 460px;
   .project-manage-delete-alert-modal-footer{
     padding: 20px;
+  }
+}
+
+//newProjectAlert
+.new-project-alert-modal-wrapper{
+  width: 454px;
+  height: 370px;
+  padding: 30px;
+  .new-project-alert-icon-box{
+    text-align: center;
+  }
+  .new-project-alert-prompt{
+    text-align: center;
+    font-size: 36px;
+  }
+  .success--tips{
+    text-align: center;
+    font-size: 16px;
+    color: #999999;
+    padding: 17px 0;
+  }
+  .btn-box{
+    text-align: center;
+    font-size: 15px;
+  }
+}
+
+
+
+//editProjectManage
+
+.edit--project--manage--wrapper{
+  padding: 0 8px;
+  .base--info--content{
+
+    //float: left;
+    //width: 530px;
+    //padding: 0 80px 0 0;
+    //border-right: 1px solid #d7d7d7;
+    .edit--project--row--box{
+      margin-bottom: 40px;
+      .edit--project--row{
+        width: 100%;
+        color: #999999;
+        padding-bottom: 4px;
+        padding-left: 7px;
+        border-bottom: 2px solid #d7d7d7;
+        margin-bottom: 15px;
+      }
+      .rule--set--content--wrap{
+        height: auto;
+        width: 100%;
+        min-height: 178px;
+        position: relative;
+      }
+      .attribute--wrapper{
+        display: inline-block;
+        vertical-align: middle;
+        width: 100%;
+        background: #fafafa;
+        padding: 15px 0;
+        margin: 0 8px;
+        .attribute--row--box{
+          display: block;
+          margin: 5px 0;
+          width: 100%;
+          height: 34px;
+          line-height: 34px;
+          &__title{
+            display: inline-block;
+            vertical-align: middle;
+            width: 117px;
+            text-align: right;
+            margin-right: 20px;
+          }
+          &__value{
+            display: inline-block;
+            width: 200px;
+          }
+          &__sample{
+            color: #40b98e;
+            margin-left: 141px;
+          }
+          &__select{
+            display: inline-block;
+            width: 100%;
+          }
+          &.select{
+            height: 42px;
+            line-height: 42px;
+          }
+        }
+        //projectManage
+        &.rule--set{
+          width: calc(100% - 290px);
+          margin-right: 0;
+          height: 100%;
+          min-height: 178px;
+        }
+      }
+
+    }
+    .edit--project--manage--footer{
+      margin: 30px 0 20px;
+    }
+  }
+  .right--content{
+    float: left;
+    width: 315px;
+    margin-left: 35px;
+    .new--project--box{
+      height: 246px;
+      border-radius: 5px;
+      background: #ecf6fb;
+      margin: 21px 0 0 0;
+      color: #3a87ad;
+      border: 1px solid #d0eff5;
+      &__head-box{
+        padding: 40px 30px 20px 30px;
+        .title{
+          font-size: 16px;
+          //color: #ffffff;
+          padding-left: 15px;
+        }
+      }
+      .prompt-content{
+        padding: 0 30px 20px;
+        color: inherit;
+        font-size: 13px;
+      }
+      &__btn--box{
+        text-align: center;
+        .new--project--box__btn{
+          padding: 2px 30px;
+        }
+      }
+    }
+    &.new--project--after{
+      .new--project--box{
+        height: 214px;
+        background: #d9edf7;
+        border: 1px solid #bce8f1 ;
+        margin-bottom: 30px;
+        .prompt-content{
+          color: inherit;
+        }
+      }
+      .data--template{
+        color: #999999;
+        padding-bottom: 4px;
+        margin: 0 0 15px 0;
+        border-bottom: 2px solid #d7d7d7;
+      }
+      .data--template--content{
+        padding: 10px 0 15px 0;
+        border-bottom:1px solid #e4e4e4 ;
+        .data--template--pattern{
+          margin-right: 13px ;
+        }
+        .data--attribute--box{
+          .attribute--row{
+            padding: 4px 0;
+            .title{
+              display: inline-block;
+              width: 80px;
+              text-align: right;
+              color: #333333;
+              margin-right: 5px;
+            }
+            .attribute-value{
+              color: #71767c;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+//editSelect
+.edit--select--modal--wrapper{
+  width: 400px !important;
+  .attribute--row--box{
+    &__title{
+      display: inline-block;
+      width: 100px;
+      text-align: right;
+      margin-right: 10px;
+    }
+    &__select{
+      display: inline-block;
+      width: 150px;
+    }
   }
 }
